--- a/docs/docs/plugins/index.mdx
+++ b/docs/docs/plugins/index.mdx
@@ -125,7 +125,7 @@ setup(
     # Require MLflow as a dependency of the plugin, so that plugin users can simply install
     # the plugin and then immediately use it with MLflow
     install_requires=["mlflow"],
-    ...,
+    # other parameters...
     entry_points={
         # Define a Tracking Store plugin for tracking URIs with scheme 'file-plugin'
         "mlflow.tracking_store": "file-plugin=mlflow_test_plugin.file_store:PluginFileStore",
