--- a/docs/docs/tracing/integrations/openai.mdx
+++ b/docs/docs/tracing/integrations/openai.mdx
@@ -389,7 +389,8 @@ The following example implements a simple function calling agent using OpenAI Fu
 
 ## Token usage
 
-MLflow >= 3.1.0 supports token usage tracking for OpenAI. The token usage for each LLM call will be logged in the `mlflow.chat.tokenUsage` attribute, and the total usage in the entire trace will be logged in the `mlflow.trace.tokenUsage` metadata field.
+MLflow >= 3.1.0 supports token usage tracking for OpenAI. The token usage for each LLM call will be logged in the `mlflow.chat.tokenUsage` attribute. The total token usage throughout the trace will be
+available in the `token_usage` field of the trace info object.
 
 ```python
 import json
@@ -406,16 +407,16 @@ last_trace_id = mlflow.get_last_active_trace_id()
 trace = mlflow.get_trace(trace_id=last_trace_id)
 
 # Print the token usage
-total_usage = json.loads(trace.info.trace_metadata["mlflow.trace.tokenUsage"])
+total_usage = trace.info.token_usage
 print("== Total token usage: ==")
 print(f"  Input tokens: {total_usage['input_tokens']}")
 print(f"  Output tokens: {total_usage['output_tokens']}")
 print(f"  Total tokens: {total_usage['total_tokens']}")
 
 # Print the token usage for each LLM call
-print("\n== Token usage for each LLM call: ==")
+print("\n== Detailed usage for each LLM call: ==")
 for span in trace.data.spans:
-    if usage := span.attributes.get("mlflow.chat.tokenUsage"):
+    if usage := span.get_attribute("mlflow.chat.tokenUsage"):
         print(f"{span.name}:")
         print(f"  Input tokens: {usage['input_tokens']}")
         print(f"  Output tokens: {usage['output_tokens']}")
@@ -428,7 +429,7 @@ for span in trace.data.spans:
   Output tokens: 22
   Total tokens: 106
 
-== Token usage for each LLM call: ==
+== Detailed usage for each LLM call: ==
 Completions_1:
   Input tokens: 45
   Output tokens: 14
