--- a/docs/docs/classic-ml/deep-learning/tensorflow/guide/index.mdx
+++ b/docs/docs/classic-ml/deep-learning/tensorflow/guide/index.mdx
@@ -291,10 +291,11 @@ predictions = loaded_model.predict(tf.random.uniform([1, 28, 28, 3]))
 
   When you save a TensorFlow model with MLflow:
 
-  1. **Format Conversion**: The model is converted to a generic MLflow `pyfunc` model
-  2. **Metadata Creation**: Model metadata is stored, including dependencies and signature
-  3. **Artifact Storage**: The model is saved to the MLflow artifact store
-  4. **Loading Capability**: The model can be loaded back as either a native TensorFlow model or a generic `pyfunc` model
+  1. **Format Conversion**: The model is converted to a generic MLflow `pyfunc` model to support deployment, loaded via `mlflow.pyfunc.load_model()`
+  2. **Preservation of Original Format**: The model is still capable of being loaded as a native TensorFlow object via `mlflow.tensorflow.load_model()`
+  3. **Metadata Creation**: Model metadata is stored, including dependencies and signature
+  4. **Artifact Storage**: The model is saved to the MLflow artifact store
+  5. **Loading Capability**: The model can be loaded back as either a native TensorFlow model or a generic `pyfunc` model
 
   This approach enables consistent model management regardless of the framework used.
 </details>
@@ -340,42 +341,29 @@ mlflow.tensorflow.log_model(
 
 ### Model Signatures
 
-A model signature describes the expected input and output formats of your model. While optional, it's a best practice for better model understanding and validation:
+A model signature describes the expected input and output formats of your model. While optional, it's a best practice for better model understanding and validation. The easiest way to add a signature is using automatic inference:
 
 ```python
 import mlflow
+from mlflow.models import infer_signature
 import tensorflow as tf
 import numpy as np
-from tensorflow import keras
-from mlflow.types import Schema, TensorSpec
-from mlflow.models import ModelSignature
 
-# Define model
-model = keras.Sequential(
-    [
-        keras.Input([28, 28, 3]),
-        keras.layers.Conv2D(8, 2),
-        keras.layers.MaxPool2D(2),
-        keras.layers.Flatten(),
-        keras.layers.Dense(2),
-        keras.layers.Softmax(),
-    ]
-)
+# Sample input data
+sample_input = np.random.uniform(size=[2, 28, 28, 3])
 
-# Define input schema
-input_schema = Schema(
-    [
-        TensorSpec(np.dtype(np.float32), (-1, 28, 28, 3), "input"),
-    ]
-)
+# Get predictions
+sample_output = model.predict(sample_input)
 
-# Create signature with input schema
-signature = ModelSignature(inputs=input_schema)
+# Infer signature from data
+signature = infer_signature(sample_input, sample_output)
 
-# Log model with signature
-with mlflow.start_run() as run:
-    mlflow.tensorflow.log_model(model, name="model", signature=signature)
+# Log model with inferred signature
+with mlflow.start_run():
+    mlflow.tensorflow.log_model(model, "model", signature=signature)
 ```
+
+When autologging is enabled with `log_input_examples=True` and `log_model_signatures=True`, MLflow automatically infers and logs the signature from your training data.
 
 The signature appears in the MLflow UI:
 
@@ -384,29 +372,51 @@ The signature appears in the MLflow UI:
 </div>
 
 <details>
-  <summary>Automatic Signature Inference</summary>
+  <summary>Manual Signature Definition</summary>
 
-  MLflow can automatically infer model signatures if you provide example data:
+  For complete control over your model signature, you can manually define the input and output schemas:
 
   ```python
   import mlflow
-  from mlflow.models import infer_signature
+  import tensorflow as tf
+  import numpy as np
+  from tensorflow import keras
+  from mlflow.types import Schema, TensorSpec
+  from mlflow.models import ModelSignature
 
-  # Sample input data
-  sample_input = np.random.uniform(size=[2, 28, 28, 3])
+  # Define model
+  model = keras.Sequential(
+      [
+          keras.Input([28, 28, 3]),
+          keras.layers.Conv2D(8, 2),
+          keras.layers.MaxPool2D(2),
+          keras.layers.Flatten(),
+          keras.layers.Dense(2),
+          keras.layers.Softmax(),
+      ]
+  )
 
-  # Get predictions
-  sample_output = model.predict(sample_input)
+  # Define input schema
+  input_schema = Schema(
+      [
+          TensorSpec(np.dtype(np.float32), (-1, 28, 28, 3), "input"),
+      ]
+  )
 
-  # Infer signature from data
-  signature = infer_signature(sample_input, sample_output)
+  # Create signature with input schema
+  signature = ModelSignature(inputs=input_schema)
 
-  # Log model with inferred signature
-  with mlflow.start_run():
-      mlflow.tensorflow.log_model(model, "model", signature=signature)
+  # Log model with signature
+  with mlflow.start_run() as run:
+      mlflow.tensorflow.log_model(model, name="model", signature=signature)
   ```
 
-  When autologging is enabled with `log_input_examples=True` and `log_model_signatures=True`, MLflow automatically infers and logs the signature from your training data.
+  Manual definition is useful when:
+  - You need precise control over tensor specifications
+  - Working with complex input/output structures
+  - The automatic inference doesn't capture your intended schema
+  - You want to specify exact data types and shapes upfront
+
 </details>
 
 ## Advanced TensorFlow Integration
@@ -581,75 +591,54 @@ with mlflow.start_run(run_name="hyperparameter_optimization"):
 
 ### Deployment Preparation
 
-Prepare your TensorFlow model for deployment with MLflow:
+Once you've trained and logged your TensorFlow model with MLflow, deploying it locally is straightforward with a single command using the MLflow CLI:
+
+```bash
+mlflow models serve -m runs:/<run_id>/model -p 5000
+```
+
+Test your deployed model:
+
+```python
+import requests
+import json
+
+# Prepare test data
+test_data = {"inputs": sample_input.numpy().tolist()}
+
+# Make prediction request
+response = requests.post(
+    "http://localhost:5000/invocations",
+    data=json.dumps(test_data),
+    headers={"Content-Type": "application/json"},
+)
+
+predictions = response.json()
+print("Predictions:", predictions)
+```
 
 <details>
-  <summary>Model Serving with MLflow</summary>
+  <summary>Advanced Deployment Options</summary>
 
-  ```python
-  import mlflow
-  import tensorflow as tf
-  from tensorflow import keras
+  The `mlflow models serve` command supports several options for customization:
 
-  # Create and train model
-  model = keras.Sequential([...])
-  model.compile(...)
-  model.fit(...)
+  ```bash
+  # Specify environment manager
+  mlflow models serve -m runs:/<run_id>/model -p 5000 --env-manager conda
 
-  # Log model with sample input for signature
-  with mlflow.start_run() as run:
-      # Create example input
-      sample_input = tf.random.uniform([1, 28, 28, 3])
+  # Enable MLServer for enhanced inference capabilities
+  mlflow models serve -m runs:/<run_id>/model -p 5000 --enable-mlserver
 
-      # Add prediction signature
-      signature = mlflow.models.infer_signature(
-          sample_input.numpy(), model.predict(sample_input)
-      )
-
-      # Log model with sample input and signature
-      mlflow.tensorflow.log_model(
-          model,
-          "model",
-          signature=signature,
-          input_example=sample_input.numpy(),
-          pip_requirements=["tensorflow==2.10.0"],
-          code_paths=["./preprocessing.py"],  # Include custom code
-      )
-
-      model_uri = f"runs:/{run.info.run_id}/model"
-
-  # Deploy model to MLflow server
-  import subprocess
-
-  subprocess.Popen(
-      [
-          "mlflow",
-          "models",
-          "serve",
-          "-m",
-          model_uri,
-          "--port",
-          "5000",
-          "--host",
-          "0.0.0.0",
-      ]
-  )
-
-  # Make prediction request
-  import requests
-  import json
-
-  inference_request = {"inputs": sample_input.numpy().tolist()}
-
-  response = requests.post(
-      "http://localhost:5000/invocations",
-      data=json.dumps(inference_request),
-      headers={"Content-Type": "application/json"},
-  )
-
-  predictions = json.loads(response.text)
-  print("Predictions:", predictions)
+  # Set custom host
+  mlflow models serve -m runs:/<run_id>/model -p 5000 --host 0.0.0.0
   ```
+
+  For production deployments, consider:
+  - Using MLServer (`--enable-mlserver`) for better performance and additional features
+  - Building Docker images with `mlflow models build-docker`
+  - Deploying to cloud platforms like Azure ML or Amazon SageMaker
+  - Setting up proper environment management and dependency isolation
+
 </details>
 
 ## Real-World Applications
